--- a/templates/training_plan/training_plan/add_training_plan.html.twig
+++ b/templates/training_plan/training_plan/add_training_plan.html.twig
@@ -7,16 +7,37 @@
           <div class="center_content">
             <div class="grid_panel">
               <div class="user_trainings_list">
-                <div class="row text-center pt-4 pl-4 pr-4 pb-4">
+            <div class="d-flex pt-3 pr-3" style="">
+              <a href="{{ path("show_training_plan_list_trainer")}}" class="btn-sm btn-dark btn-block add_plan_btn text-center" role="button"><i class="fas fa-backward"></i>  Powrót na listę</a>
+            </div>
+            <div class="d-flex justify-content-center">
+            <div class="d-flex flex-column justify-content-center add_training_plan_form">
+                <div class="text-center pt-0 pl-4 pr-4 pb-2">
                   <h2>Dodaj nowy plan treningowy</h2>
                 </div>
-                <div class="row text-center pt-4 pl-4 pr-4 pb-4">
-                  {{ form_start(form) }}
-                    {{ form_row(form.planName) }}
-                    {{ form_row(form.description) }}
+                <div class="d-flex flex-column justify-content-centerr pt-4 pl-4 pr-4 pb-4">
+                  {{ form_start(form, {'method': 'POST', 'attr': {'class': 'text-center'}})}}
+                    <div class="form-control">
+                      <h4>{{ form_label(form.planName) }} <i class="fa fa-calendar"></i></h4>
+                      {{ form_widget(form.planName, {'attr': {'class': 'custom_input', 'name': 'Plan Name', 'placeholder': 'Plan Name', 'id': 'planName'}})}}
+                      <small>{{ form_help(form.planName) }}</small>
+                      <div class="form-error">
+                        {{ form_errors(form.planName) }}
+                      </div>
+                      <h4>{{ form_label(form.description) }} <i class="fas fa-pencil-alt"></i></h4>
+                      {{ form_widget(form.description, {'attr': {'class': 'custom_input', 'name': 'Description', 'placeholder': 'Description', 'id': 'description'}})}}
+                      <small>{{ form_help(form.description) }}</small>
+                      <div class="form-error">
+                        {{ form_errors(form.description) }}
+                      </div>
+                      <div class="d-flex flex-column justify-content-center">
+                        {{ form_widget(form.saveAndAdd,{'attr': {'class': 'btn-sm btn-dark text-center pl-5 pr-5 mt-4', 'type': 'submit'}})}}
+                        {{ form_widget(form.save,{'attr': {'class': 'btn-sm btn-dark text-center pl-5 pr-5 mt-4', 'type': 'submit'}})}}
+                      </div>
+                    </div>
                   {{ form_end(form) }}
                 </div>
-                <a href="{{ path("show_training_plan_list_trainer")}}" class="btn btn-dark" role="button">Wyjdź bez zapisywania!</a>
+            </div>
             </div>
           </div>
         </div>
