--- a/templates/training_plan/training_plan/show_training_plan_day.html.twig
+++ b/templates/training_plan/training_plan/show_training_plan_day.html.twig
@@ -1,5 +1,5 @@
 {% extends "base.html.twig" %}
-{% use "menu_trainer_home_page.html.twig" %}
+{% use "menu_user_home_page.html.twig" %}
 {% block content %}
         <div class="background" id="background">
                 {% include "flash_messages.html.twig" %}
@@ -7,34 +7,45 @@
           <div class="center_content">
             <div class="grid_panel">
               <div class="user_trainings_list">
-                <div class="row text-center pt-4 pl-4 pr-4 pb-4">
-                  <h2><span class="text-success">NAZWA PLANU</span></h2><br>
+                <div class="text-center pt-4 pl-4 pr-4 pb-4">
+                  <h2><span class="text-success">{{ trainingPlan.planName }}</span></h2><br>
                   <small>Tu znajdziesz konkretne dni twojego planu</small>
                 </div>
                 <div class="d-flex justify-content-center">
                   <nav aria-label="Page navigation example text-center ">
                     <ul class="pagination pagination-lg">
+                      {% if previousDay is null %}
+                      {% else %}
                       <li class="page-item">
-                        <a class="page-link text-dark" href="#" aria-label="Previous">
+                      <a class="page-link text-dark main_green_text" href="{{ path("show_training_plan_day", {'trainingPlanDay': previousDay.id, 'trainingPlan': trainingPlan.id }) }}">
                           <span aria-hidden="true">&laquo;</span>
-                          <span class="sr-only">Previous</span>
-                        </a>
+                          <span class="sr-only">Next</span>
+                      {{ previousDay.dayName }}
+                      </a>
                       </li>
-                      <li class="page-item disabled"><a class="page-link text-dark" href="#">DISABLED</a></li>
-                      <li class="page-item"><a class="page-link text-dark" href="#">NAZWA DNIA</a></li>
-                      <li class="page-item"><a class="page-link text-dark" href="#">NAZWA DNIA 3</a></li>
+                      {% endif %}
                       <li class="page-item">
-                        <a class="page-link text-dark" href="#" aria-label="Next">
+                      <a class="page-link text-dark second_green_text font-weight-bold" href="{{ path("show_training_plan_day", {'trainingPlanDay': currentDay.id, 'trainingPlan': trainingPlan.id }) }}">
+                      {{ currentDay.dayName }}
+                      </a>
+                      </li>
+                      {% if nextDay is null %}
+
+                      {% else %}
+                      <li class="page-item">
+                      <a class="page-link text-dark main_green_text" href="{{ path("show_training_plan_day", {'trainingPlanDay': nextDay.id, 'trainingPlan': trainingPlan.id }) }}">
+                      {{ nextDay.dayName }}
                           <span aria-hidden="true">&raquo;</span>
                           <span class="sr-only">Next</span>
-                        </a>
+                      </a>
                       </li>
+                      {% endif %}
                     </ul>
                   </nav>
                 </div>
                 <div class="row text-center pt-4 pl-4 pr-4 pb-4" style="overflow-x:auto;" >
-                  <table class="table-xsm table-responsive-sm">
-                    <tr>
+                  <table class="table">
+                    <tr class="thead-dark">
                       <th>Partia</th>
                       <th>Nazwa ćwiczenia</th>
                       <th>Serie</th>
@@ -43,17 +54,23 @@
                       <th>Przerwa</th>
                       <th>Opis  <i class="fas fa-pen-square"></i></th>
                     </tr>
-                    {% for trainingPlanDay in trainingPlanDays %}
+                    {% if trainingPlanExercises is empty %}
                     <tr>
-                      <td>{{ trainingPlanDay.muscleGroup }}</td>
-                      <td>{{ trainingPlanDay.exerciseName }}</td>
-                      <td>{{ trainingPlanDay.sets }}</td>
-                      <td>{{ trainingPlanDay.reps }}</td>
-                      <td>{{ trainingPlanDay.time }}</td>
-                      <td>{{ trainingPlanDay.break }}</td>
+                      <td colspan="7"><h2 class="text-danger">Brak ćwiczeń w wybranym dniu!</h2></td>
+                    </tr>
+                    {% else %}
+                    {% for trainingPlanExercise in trainingPlanExercises %}
+                    <tr>
+                      <td>{{ trainingPlanExercise.muscleGroup }}</td>
+                      <td>{{ trainingPlanExercise.exerciseName }}</td>
+                      <td>{{ trainingPlanExercise.sets }}</td>
+                      <td>{{ trainingPlanExercise.reps }}</td>
+                      <td>{{ trainingPlanExercise.time }}</td>
+                      <td>{{ trainingPlanExercise.break }}</td>
                       <td>Opis z możliwością wklejenia linku</td>
                     </tr>
                     {% endfor %}
+                    {% endif %}
                     </table>
                 </div>
             </div>
