--- a/templates/training_plan/training_plan/show_training_plan_access_list.html.twig
+++ b/templates/training_plan/training_plan/show_training_plan_access_list.html.twig
@@ -5,6 +5,9 @@
         {% include "flash_messages.html.twig" %}
         <div class="main_content">
           <div class="center_content">
+                <div class="d-flex pt-3 pr-3" style="">
+                  <a href="{{ path("show_training_plan_list_trainer")}}" class="btn-sm btn-dark btn-block add_plan_btn text-center" role="button"><i class="fas fa-backward"></i>  Powrót na listę</a>
+                </div>
             <div class="grid_panel">
               <div class="user_trainings_list">
                 <div class="row text-center pt-4 pl-4 pr-4 pb-4">
